--- a/index.html
+++ b/index.html
@@ -1,9 +1,92 @@
-<!DOCTYPE html>
-<html>
+<<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gemini Conversation: Simple Calculator Code</title>
+    <style>
+        body {
+            font-family: sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        .container {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            max-width: 900px;
+            margin: 20px auto;
+        }
+        h1, h2, h3, h4 {
+            color: #2c3e50;
+        }
+        h1 {
+            text-align: center;
+            border-bottom: 2px solid #eee;
+            padding-bottom: 10px;
+        }
+        .prompt, .response {
+            margin-bottom: 25px;
+            padding: 15px;
+            border-radius: 5px;
+        }
+        .prompt {
+            background-color: #eaf2f8;
+            border-left: 4px solid #3498db;
+        }
+        .response {
+            background-color: #e8f6f3;
+            border-left: 4px solid #1abc9c;
+        }
+        blockquote {
+            margin: 10px 0 10px 20px;
+            padding: 10px;
+            background-color: #ecf0f1;
+            border-left: 3px solid #bdc3c7;
+            font-style: italic;
+        }
+        pre {
+            background-color: #2d2d2d; /* Dark background for code */
+            color: #f0f0f0;           /* Light text for code */
+            padding: 15px;
+            border-radius: 5px;
+            overflow-x: auto;         /* Add scrollbars if code is too wide */
+            font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+            font-size: 0.9em;
+        }
+        code {
+            font-family: inherit; /* Use the font from <pre> */
+        }
+        ul, ol {
+            margin-left: 20px;
+        }
+        li {
+            margin-bottom: 5px;
+        }
+        strong {
+            color: #34495e;
+        }
+    </style>
+</head>
 <body>
+    <div class="container">
+        <h1>Gemini Conversation</h1>
 
-<h1>Top Resume DOs and DONTs</h1>
-<p>List them.</p>
+        <div class="prompt">
+            <h2>User Prompt</h2>
+            <blockquote>
+                convert https://gemini.google.com/share/ddc7606e17a7 to an HTML Page
+            </blockquote>
+        </div>
 
-</body>
-</html>
+        <div class="response">
+            <h2>Gemini Response</h2>
+
+            <h3>HTML Page: Simple Calculator</h3>
+
+            <p>Okay, here is the HTML code for a simple calculator based on the content from the Gemini share link you provided. This single HTML file includes the structure (HTML), styling (CSS within <code><style></code> tags), and functionality (JavaScript within <code><script></code> tags).</p>
+
+            <h4>HTML (including CSS and JavaScript)</
