--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Building an AI-Driven Wiki on GitHub Pages: 12 Steps</h1>
+        <h1>12 Steps to AI-Driven Wikis on GitHub Pages</h1>
 
         <ol>
             <li>
