--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </li>
             <li>
             Check out <a href="https://g.co/gemini/share/ddc7606e17a7" target="_blank" rel="noopener noreferrer">W3C (opens in new tab)</a>.
-            for deeper dive on AI driven Wiki pages.
+            for deeper dive on AI driven Wiki pages..
             </li>
         </ol>
     </div>
