--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <strong>Commit, Push, and Iterate:</strong> Commit your code (SSG configuration, content, templates, JavaScript) to your repository and push it to the branch configured for GitHub Pages. Your site will rebuild and deploy. Continuously add content and improve the AI features.
             </li>
             <li>
-            Check out <a href="https://g.co/gemini/share/ddc7606e17a7" target="_blank" rel="noopener noreferrer">W3C (opens in new tab)</a>.
+            Check out <a href="https://g.co/gemini/share/ddc7606e17a7" target="_blank" rel="noopener noreferrer">Wiki in GH Pages (opens in new tab)</a>.
             for deeper dive on AI driven Wiki pages..
             </li>
         </ol>
