--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
 </head>
 <body>
     <div class="container">
+        <h1>A self-service wiki is an ideal vehicle to gather knowledge across a team and to teach team members how to begin using AI.</h1>
+
+
+        
         <h1>12 Steps to AI-Driven Wikis on GitHub Pages</h1>
 
         <ol>
