--- a/index.html
+++ b/index.html
@@ -63,7 +63,11 @@
                 <strong>Create GitHub Repository:</strong> Start by creating a new public repository on GitHub to host your wiki files.
             </li>
             <li>
-                <strong>Choose Static Site Generator (SSG):</strong> Select an SSG compatible with GitHub Pages (like Jekyll - native support, Hugo, Eleventy, or even plain HTML/JS). This tool will build your HTML pages from source files (like <code>.md</code> files).
+                <strong>Choose Static Site Generator (SSG):</strong> Select an SSG compatible with GitHub Pages (like Jekyll - native support, Hugo, Eleventy (11ty), or even plain HTML/JS). This tool will build your HTML pages from source files (like <code>.md</code> files).
+            </li>
+            <li>
+            Check out <a href="https://11ty.rocks/posts/create-your-first-basic-11ty-website/" target="_blank" rel="noopener noreferrer">11ty is the easiest to learn (opens in new tab)</a>.
+            for deeper dive on AI driven Wiki pages..
             </li>
             <li>
                 <strong>Local Development Setup:</strong> Clone the repository to your local machine and set up the chosen SSG's development environment according to its documentation.
